# Arbit

./: .gitignore  CMakeLists.txt  README.md  hellp.cpp
include/: binance_futures_ws.hpp  binance_ws.hpp  book_storage.hpp  bybit_ws.hpp  connection_pool.hpp  eth_binance_ws.hpp  eth_bybit_ws.hpp  eth_okx_ws.hpp  fast_json_parser.hpp  fast_math.hpp  fast_orderbook.hpp  multi_leg_arbitrage.hpp  okx_ws.hpp  performance_monitor.hpp  real_cross_asset_arbitrage.hpp  real_volatility_arbitrage.hpp  risk_manager.hpp  simd_optimizer.hpp  synthetic_engine.hpp
src/: binance_futures_ws.cpp  binance_ws.cpp  book_storage.cpp  bybit_ws.cpp  eth_binance_ws.cpp  eth_bybit_ws.cpp  eth_okx_ws.cpp  main.cpp  multi_leg_arbitrage.cpp  okx_ws.cpp  performance_monitor.cpp  real_cross_asset_arbitrage.cpp  real_volatility_arbitrage.cpp  risk_manager.cpp  simd_optimizer.cpp  synthetic_engine.cpp
